# copter_project

./: README.md
ccny_rgbd_tools/ccny_rgbd/src/apps/: visual_odometry.cpp
copter_arduino/: package.xml
copter_arduino/launch/: arduino_imu.launch  arduino_imu_fitpc.launch
copter_arduino/src/: arduino_sensor.cpp
copter_control/: package.xml
copter_control/launch/: control.launch  control_fitpc.launch
copter_control/src/: control2.cpp  control2.hpp
copter_description/: APM Params
copter_description/apm_params/: RCC.param  RCC2.param  RCC3.param  fitpc (Конфликт регистра букв).param  fitpc.param  fpv.param  fpv_2.param  fpv_3.param  fpv_3_1(after_param_error).param  fpv_4(after_param_error).param
copter_description/launch/: apm2.launch  apm2_blacklist.yaml  apm2_config.yaml  copter_rviz.launch  ekf_imu_test.launch  ekf_template.launch  ekf_vo_sonar_test2.launch  laser_gmapping.launch  laser_scan.launch  odometry_rviz.launch  openni2.launch  visual_odometry.launch
copter_description/meshes/stl/: arm.dae  frame.STL
copter_description/robots/: ray.xacro
copter_description/urdf/: dji_f550_gazebo.xacro  dji_f550_model.xacro  dji_f550_ray.xacro
copter_description/urdf/sensors/: asus_xtion_pro.xacro
copter_gazebo/: manifest.xml
copter_gazebo/launch/: copter_gazebo.launch  copter_gazebo_laser.launch
copter_gazebo/models/barrier_15/: model.config  model.sdf
copter_gazebo/models/barrier_15/meshes/: barrier_15.STL  brick.STL
copter_gazebo/models/barrier_20/: model.config  model.sdf
copter_gazebo/models/barrier_20/meshes/: barrier_20.STL  stick.STL
copter_gazebo/models/barrier_25/: model.config  model.sdf
copter_gazebo/models/barrier_25/meshes/: barrier_25.STL
copter_gazebo/models/gamezone/: model.config  model.sdf
copter_gazebo/models/gamezone/meshes/: arena.STL  bricks.STL  gamezone.dae  outside.STL  sticks.STL  walls.STL
copter_gazebo/models/marker_end/: model.config  model.sdf
copter_gazebo/models/marker_start/: model.config  model.sdf
copter_gazebo_plugins/: CMakeLists.txt  package.xml
copter_gazebo_plugins/include/copter_gazebo_plugins/: gazebo_ros_imu.h  gazebo_ros_sonar.h
copter_gazebo_plugins/src/: flyer_plugin.cpp  gazebo_ros_imu.cpp  gazebo_ros_sonar.cpp  px4flow_plugin.cpp  wind.cpp  wind.hpp
copter_mavros/src/: mavros_bridge.cpp  mavros_bridge.hpp
copter_navigation/: CMakeLists.txt  package.xml
copter_navigation/launch/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.yaml  navigation.launch
copter_pose3d/: CMakeLists.txt  package.xml
fit-pc/: .bashrc  grub
fit-pc/catkin_ws/src/copter_arduino/: CMakeLists.txt
fit-pc/catkin_ws/src/copter_control/: CMakeLists.txt
fit-pc/catkin_ws/src/copter_mavros/: CMakeLists.txt  package.xml
fit-pc/catkin_ws/src/copter_msgs/: CMakeLists.txt  package.xml
fit-pc/catkin_ws/src/copter_msgs/msg/: PilotCommands.msg  UltraSonicRange.msg
fit-pc/catkin_ws/src/mavros_sonar_plugin/: mavros_plugins.xml
fit-pc/ros_ws/copter_description/: manifest.xml
fit-pc/ros_ws/copter_description/launch/: apm2.launch  apm2_blacklist.yaml  apm2_config.yaml  control_sim.launch  copter_tf.launch  ekf_imu_sonar_test2.launch  ekf_imu_test2.launch  ekf_test.launch  ekf_vo_imu_test2.launch  ekf_vo_test2.launch  laser.launch  openni2.launch  start_z_stab.launch  visual_odometry.launch
fit-pc/ros_ws/copter_description/robots/: copter_dji_f550.xacro
fit-pc/ros_ws/copter_description/rviz/: config.rviz
mavros_sonar_plugin/: CMakeLists.txt  package.xml
mavros_sonar_plugin/src/: sonar_plugin.cpp
sketchbook/MinIMU9AHRS/: MinIMU9AHRS.ino
sketchbook/libraries/Ultrasonic/: Ultrasonic.cpp
sketchbook/libraries/ros_lib/: ros.h
(+11 files in other folders)
